[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "akl-ped-counts"
version = "0.1.1"
description = "Hourly pedestrian count data from Heart of the City Auckland's monitoring system (2019–2025), covering 21 sensor locations across Auckland CBD."
readme = "README.md"
license = "CC-BY-4.0"
requires-python = ">=3.9"
authors = [
    { name = "Hyesop Shin", email = "shinhyesop@gmail.com" },
]
keywords = [
    "pedestrian",
    "auckland",
    "urban",
    "transport",
    "giscience",
    "open-data",
    "new-zealand",
    "pedestrian-counting",
    "city-centre",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=1.5.0",
]

[project.optional-dependencies]
polars = ["polars>=0.20.0"]
plot = ["matplotlib>=3.5.0", "seaborn>=0.12.0"]
geo = ["folium>=0.14.0"]
all = ["polars>=0.20.0", "matplotlib>=3.5.0", "seaborn>=0.12.0", "folium>=0.14.0"]

[project.urls]
Homepage = "https://dataandcrowd.github.io/akl-ped-counts"
Repository = "https://github.com/dataandcrowd/akl-ped-counts"
Documentation = "https://dataandcrowd.github.io/akl-ped-counts"
"Data Source" = "https://www.hotcity.co.nz/pedestrian-counts"

[tool.hatch.build.targets.sdist]
include = [
    "src/akl_ped_counts/**",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/akl_ped_counts"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"

